# rocketlaunch_feishu

./: .env.example  .gitignore  Dockerfile  Dockerfile.local  README.md  docker-compose.yml  pyproject.toml
ai/: 1.md
src/python_cli_starter/: cli.py  feishu_bitable.py
src/rocketlaunch_feishu/: __init__.py  cli.py  feishu_bitable.py  html_parser.py  main.py
suggestion/: 1.md  2.md  3.md  4.md
tests/: test_html_parser.py  test_html_parser_with_files.py
tests/test_data/html_samples/: sample_failure.html  sample_no_border_color.html  sample_partial.html  sample_success.html  sample_unknown_rgba.html
