[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocketlaunch_feishu"
version = "0.1.0"
description = "A CLI tool for synchronizing rocket launch data to Feishu Bitable"
readme = "README.md"
requires-python = "<3.13"
license = "MIT"
keywords = []
authors = [
  { name = "zhangchao", email = "zhangchao564265135@hotmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "python-dotenv>=1.1.0",
  "beautifulsoup4>=4.13.4",
  "lark-oapi>=1.4.13",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
]
build = [
  "pyinstaller>=6.3.0",
]

[project.scripts]
cli = "rocketlaunch_feishu.main:app"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
